deploy/argocd/apps/kubevirt/kustomize/httproute-oauth2-envoy-gateway/security-policy.yaml
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: oidc-kubevirt-manager
  namespace: kubevirt
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: kubevirt-manager
  oidc:
    provider:
      backendRefs:
      - group: gateway.envoyproxy.io
        kind: Backend
        name: backend-keycloak
        port: 443
        weight: 1
      issuer: "https://keycloak.PLACEHOLDER.example.com/realms/k8s"
      authorizationEndpoint: "https://keycloak.PLACEHOLDER.example.com/realms/k8s/protocol/openid-connect/auth"
      tokenEndpoint: "https://keycloak.PLACEHOLDER.example.com/realms/k8s/protocol/openid-connect/token"
      backendSettings:
        retry:
          numRetries: 3
          perRetry:
            backOff:
              baseInterval: 500ms
              maxInterval: 5s
          retryOn:
            triggers: ["5xx", "gateway-error", "reset", "connect-failure"]
    clientID: "oauth2-proxy"
    clientSecret:
      group: ""
      kind: Secret
      name: "oidc-client-secret"
    redirectURL: "https://kubevirt.PLACEHOLDER.example.com/oauth2/callback"
    logoutPath: "/oauth2/sign_out"
    refreshToken: true
